<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:orientation="vertical"
    tools:context=".activity.DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_700"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="55dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgBookCoverDetail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1.5"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:id="@+id/tvDetailBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:padding="8dp"
                        android:text="@string/book_name"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDetailAuthorName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvDetailBookName"
                        android:padding="8dp"
                        android:text="@string/author_name"
                        android:textColor="#000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvDetailBookPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvDetailAuthorName"
                        android:padding="8dp"
                        android:text="@string/rs_299"
                        android:textColor="#357a38"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvDetailBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1.2"
                    android:drawableLeft="@drawable/ic_baseline_star_24"
                    android:drawablePadding="4dp"
                    android:padding="4dp"
                    android:text="@string/_4_5"
                    android:textColor="#ffc828"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/llContent">

                <TextView
                    android:id="@+id/tvAboutTheBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="6dp"
                    android:text="@string/about_the_book"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvAboutTheBook"
                    android:layout_margin="10dp"
                    android:padding="6dp"
                    android:text="@string/about_app_fragment"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-6dp"
        android:padding="13dp"
        android:text="@string/add_to_favourites"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />


        <RelativeLayout
            android:id="@+id/rlDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ProgressBar
                android:id="@+id/progressBarDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>